# Game-Engine

./: Cargo.toml  README.md  imgui.ini
assets/meshes/: cube.fbx  sphere.fbx
assets/meshes/bmw/: bmw_i8.fbx
assets/meshes/mercedes/: mercedes.fbx
assets/meshes/nissan/: nissan.fbx
assets/meshes/pistol/: gun.fbx
assets/meshes/star_destroyer/: star_destroyer.fbx
assets/meshes/x-wing/: x-wing.fbx
assets/scenes/: city_racing.rscene  city_racing_big.rscene  sponza_scene.rscene
rusty_editor/: Cargo.toml
rusty_editor/src/: main.rs
rusty_editor/src/panels/: console_panel.rs  content_browser_panels.rs  material_inspector_panel.rs  mod.rs  scene_hierarchy_panel.rs
rusty_engine/: Cargo.toml
rusty_engine/assets/compute_shaders/: environment_brdf.hlsl  environment_equirect_to_cube.hlsl  environment_irradiance.hlsl  environment_prefilter.hlsl
rusty_engine/assets/primitive_meshes/: cube.fbx
rusty_engine/assets/shaders/: composite_shader.hlsl  fullscreen_quad_shader.hlsl  grid_shader.hlsl  imgui_shader.hlsl  mesh_pbr_shader.hlsl  skybox_shader.hlsl
rusty_engine/assets/test_assets/: tga_test_image.tga
rusty_engine/src/: lib.rs
rusty_engine/src/core/: asset_manager.rs  file_dialog.rs  input.rs  mod.rs  timer.rs  timestep.rs  utils.rs  window.rs
rusty_engine/src/core/events/: event.rs  keyboard_event.rs  mod.rs  mouse_event.rs  window_event.rs
rusty_engine/src/imgui/: imgui_platform.rs  imgui_renderer.rs  mod.rs
rusty_engine/src/renderer/: command_buffer.rs  editor_camera.rs  environment.rs  graphics_context.rs  graphics_pipeline.rs  index_buffer.rs  material.rs  mesh.rs  mod.rs  render_target.rs  renderer.rs  scene_renderer.rs  shader.rs  shader_library.rs  shader_resource.rs  shader_uniform.rs  texture.rs  vertex_buffer.rs
rusty_engine/src/scene/: component.rs  entity.rs  mod.rs  scene.rs
rusty_engine/src/tests/: entity_tests.rs  mod.rs  scene_tests.rs  texture_tests.rs
rusty_runtime/: Cargo.toml
rusty_runtime/.cargo/: config.toml
rusty_runtime/src/: main.rs
