[package]
name = "rusty_editor"
version = "0.1.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_engine = { path = "../rusty_engine" }
imgui = { path = "../vendor/imgui-rs/imgui" }
imguizmo = { path = "../vendor/imguizmo-rs/imguizmo" }
directx_math = "0.2.2"
chrono = "0.4.19"
lazy_static = "1.4.0"
legion = "0.4.0"
serde = "1.0.133"
serde_json = "1.0.78"

[dependencies.windows]
version = "0.25.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Hlsl",
    "Win32_Graphics_Dxgi",    

    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",

    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",

    "Win32_System_SystemServices",
    "Win32_System_WinRT",
]
